# ros2-ws-action

./: .gitignore  LICENSE  README.md  action.yaml  action.yml
.github/workflows/: action-test.yml  test.yaml
scripts/: build-and-test.bash  setup-dependencies.bash
setup/: action.yaml
test/: action.yaml
test/build_fail/: CMakeLists.txt  package.xml
test/build_fail/src/: main.cpp
test/failed_build/: CMakeLists.txt  package.xml
test/failed_build/src/: main.cpp
test/failed_test/: CMakeLists.txt  package.xml
test/failed_test/src/: main.cpp
